LAU-1396 address sonar issues